Added content to work page

--- a/styling.css
+++ b/styling.css
@@ -15,7 +15,7 @@ h2{
     text-align: center;
 }
 
-.index_body,.skills{
+.index_body,.skills_container,.work_container{
     
     background-color: #322D31 ;
     opacity: .9;
@@ -31,8 +31,11 @@ h2{
 background-image: url('images/background_skills.jpg');
 }
 
-.skills{
+
+.skills_container,.work_container{
  margin-top:5%;
+ padding: 10px;
+ text-align: justify;
 
 }
 
