--- a/styling.css
+++ b/styling.css
@@ -1,96 +1,63 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 *{
-    margin:0;
-    font-style: "Inter", sans-serif;
-    
+    margin: 0;
+    padding:0;
+    box-sizing: border-box;
 }
+
 body{
-
-    background-image:url("images/background.jpg");
-    background-size: cover;
-    font-size:1.1rem;
-}
-
-h1,h2,h4,p,li,.col{
-color: white;
-}
-
-h3{
-    
-    color:white;
-    margin-right: 10px;
-    font-weight:700;
-    font-size: 30px;
-}
-
-h2,h4{
-    text-align: center;
-}
-
-.links{
-    display:flex;
-    justify-content: space-between;
-    width:40%;
-    font-size: 30px;
-    
-}
-a:link,a:visited,a:hover,a:active{
-    text-decoration: none;;
-    color:whitesmoke;
-}
-
-a:hover,a:active{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.6rem;
     background-color: whitesmoke;
-    border: 1px;
-    color:black;
-    border-radius: 10px;
 }
+
+.header,.footer{
+    background-color: rgba(45, 153, 246, 0.765);
+    position: absolute;
+    width: 100%;
+}
+
 .header{
-    background-color: #322D31;
-    padding: 1%;
+    top:0;
     display: flex;
     justify-content: space-between;
+    padding-left:1%;
+    padding-right: 1%;
+
+}
+
+.footer{
+    bottom:0;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 2%;
+    padding-right:2%;
+    height:8%;
+    padding-top: 1%;
+}
+
+.header-nav{
+    width: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 1%;
     
 }
 
-.index_body,.skills_container,.work_container,.row{
-    
-    background-color: #322D31 ;
-    margin-top:5%;
-    opacity: .9;
-   margin-left:15%;
-   margin-right:15%;
+.header-nav-link{
+    color: black;
+}
+
+.header-nav-link:hover{
+    display:block;
+    background-color: white;
+    border-radius: 5%;
+    text-decoration: none;
 
 }
 
-
-
-
-.skills_container,.work_container,.row{
- margin-top:5%;
- padding: 10px;
- text-align: justify;
-
+.footer-img{
+    width:25px;
+    height:25px;
 }
 
 
-.education,.skill_list{
-    text-align: justify;
-    margin-left: 25%;
-margin-right:25%;
-padding-bottom: 5%;
-
-}
-
-.summary_me{
-    text-align: justify;
-padding-top: 5%;
-    margin-left: 25%;
-margin-right:25%;
-}
-
-.row{
-
-    height:40%;
-}
