--- a/css/style.css
+++ b/css/style.css
@@ -4,26 +4,35 @@
     box-sizing: border-box;
 }
 
+.nowrap{
+  white-space: nowrap;
+}
+
 body{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.6rem;
+    font: 1.6rem Arial, Helvetica, sans-serif;
+    
     background-color: whitesmoke;
+
     display: flex;
     flex-direction: column;
     min-height:100vh;
 }
 
 
-.header,.footer{
+header,footer{
     background-color: rgb(101, 180, 249);
     position:sticky;
-    width: 100%;
+    
 }
 
-.main{
+main{
     flex-grow: 1;
-    margin:auto;
-    text-align: center;  
+    display:flex;
+    gap:1.5rem;
+    padding: 1rem;
+
+    flex-direction: column;
+    align-items: center;  
     
 }
 section p{
@@ -43,8 +52,10 @@ section .section-center{
 
 .main-section-list{
     padding-left:10%;
+    text-align: left;
 }
-.header{
+
+header{
     top:0;
     display: flex;
     justify-content: space-between;
@@ -57,24 +68,27 @@ section .section-center{
 /* Level with links */
 .header h2{
     margin-top: .5%;
+    
 }
 
-.footer{
+footer{
     bottom:0;
     display: flex;
     justify-content: space-between;
     padding-left: 5%;
     padding-right:5%;
-    height:8%;
+    height:7%;
     padding-top: 1%;
-   
+
 }
 
 .header-nav{
     width: 50%;
     display: flex;
+    
     justify-content: space-evenly;
     padding: 1%;
+   
     
 }
 
@@ -98,9 +112,44 @@ section .section-center{
     height:25px;
 }
 
-.main-section-list{
-    text-align: left;
-    
+section h2{
+    text-align: center;
 }
 
 
+
+
+
+.card{
+    
+    border: 2px solid black;
+    background-color: rgb(231, 227, 227);
+    border-radius: 5%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    width: min(100%,400px);
+    padding:2%;
+    margin: 2%;
+    
+
+}
+
+.card description{
+    display: flex;
+    flex-flow: column nowrap;
+}
+
+
+
+@media screen and (min-width:576px){
+    main{
+        justify-content:center;
+        flex-flow: row wrap;
+        padding:1rem;
+    }
+
+ 
+}
