--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 }
 
 body{
-    font: 1.6rem Arial, Helvetica, sans-serif;
+    font: 1rem Arial, Helvetica, sans-serif;
     
     background-color: whitesmoke;
 
@@ -42,9 +42,6 @@ section p{
     margin-top:1.5rem;
 }
 
-section h2{
-    margin-top: 2%;
-}
 
 section .section-center{
     text-align:center;
@@ -63,6 +60,11 @@ header{
     padding-right: 1%;
     
 
+}
+
+h3{
+    padding-bottom: 2%;
+    text-align: center;
 }
 
 /* Level with links */
@@ -129,10 +131,13 @@ section h2{
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    
     width: min(100%,400px);
+    
     padding:2%;
-    margin: 2%;
+    
+    
+    align-self: stretch;
     
 
 }
@@ -149,6 +154,10 @@ section h2{
         justify-content:center;
         flex-flow: row wrap;
         padding:1rem;
+        
+    }
+    body{
+        font-size: 1.5rem;
     }
 
  
