Added a menu for smaller screens
Added a menu which opens on hover for smaller screens to prevent overflow for navigation pane.

--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,9 @@ section .section-center{
 header{
     top:0;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
     padding-left:1%;
     padding-right: 1%;
     
@@ -85,14 +87,32 @@ footer{
 }
 
 .header-nav{
-    width: 50%;
-    display: flex;
     
-    justify-content: space-evenly;
-    padding: 1%;
 
-    visibility: hidden;
+    display:none;
    
+    
+}
+
+.menu-nav{
+    display: block;
+
+}
+
+.menu-nav nav{
+    display:none;
+}
+
+.menu-nav-symbol:hover::after{
+    display:none;
+}
+
+.menu-nav:hover nav{
+    display:flex;
+    flex-direction: column;
+    align-items:center;
+    padding:2%
+    
     
 }
 
@@ -101,6 +121,7 @@ footer{
     text-decoration: none;
     padding-left:2%;
     padding-right:2%;
+    
 }
 
 .header-nav-link:hover{
@@ -166,15 +187,35 @@ section h2{
         flex-flow: row wrap;
         padding:1rem;
         
+        
     }
+  
+
     body{
         font-size: 1.5rem;
     }
 
+    header{
+    top:0;
+    display: flex;
+    justify-content: space-between;
+    padding-left:1%;
+    padding-right: 1%;
+    
+
+}
+
     .header-nav{
-        visibility: visible;
+        display: block;
+        width: 50%;
+        display: flex;
+        justify-content: space-evenly;
+        padding: 1%;
     }
 
+    .menu-nav{
+        display:none;
+    }
  
 }
 
