--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ section h2{
     flex-direction: column;
     align-items: center;
     
-    width: min(100%,400px);
+    width: min(100%,500px);
     
     padding:2%;
     
@@ -177,6 +177,8 @@ section h2{
     display:block;
     place-content: center;
     margin-bottom: 2%;
+    width:100%;
+    height:auto;
 
 }
 
